first prototype done

--- a/css/home.css
+++ b/css/home.css
@@ -9,6 +9,7 @@ html , body{
 
     background-color: black;
     color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 header {
