--- a/view/home.html
+++ b/view/home.html
@@ -13,7 +13,7 @@
         </div>
         <div id="headText">
             <h1>Peacock</h1>
-            <h4>The Portfolio Hacks</h4>
+            <h4>The Card</h4>
         </div>
     </header>
 
