--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,16 +8,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .peacock{
-            box-shadow: inset 0px 0px 10px #3ba1e4;
+            box-shadow: inset 0px 0px 10px #484848;
         }
     </style>
 </head>
 <body class="bg-zinc-900 text-white flex flex-col items-center justify-center gap-2">
-    <img src="/images/peacock 2.svg" alt="" class="w-20 rounded-lg pt-1 peacock">
     <form action="/name" method="post" class="flex flex-col justify-center">
+        <img src="/images/peacock 2.svg" alt="" class="rounded-t-lg pt-1 peacock border border-zinc-600">
         <!-- <label for="name">Enter name</label> -->
-        <input type="text" placeholder="Your name?" name="name" class="w-full bg-zinc-800 text-gray-400 mb-4 p-2 border border-zinc-600 rounded-lg focus:outline-none focus:border-zinc-400">
-        <button class="bg-blue-500 hover:bg-blue-600 rounded-lg px-3 py-2">Next</button>
+        <input type="text" placeholder="Your name?" name="name" class="w-full bg-zinc-800 text-gray-400 mb-4 p-2 border border-zinc-600 rounded-b-lg focus:outline-none focus:border-zinc-400 peacock" required>
+        <button class="bg-blue-500 hover:bg-blue-600 rounded-lg px-3 py-2">Next &rightarrow;</button>
     </form>
 </body>
 </html>
