--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,7 @@
 <body class="bg-zinc-900 text-white flex flex-col items-center justify-center gap-2">
     <h1 class="text-2xl font-bold m-4">Peacock Welcomes you, <%= name %></h1>
     <div class="main bg-zinc-800 peacockk border border-zinc-600 rounded-lg">
-        <a class="builder gap-0 flex flex-col" href="/builder">
+        <a class="builder gap-0 flex flex-col" href="/forefront">
             <img src="/images/peacock 2.svg" alt="Peacock" class="peacock rounded-t-lg">
             <p class="border-t border-zinc-600 px-3 py-2 text-lg font-semibold peacock rounded-b-lg">Create Portfolio</p>
         </a>
