--- a/views/forefront.ejs
+++ b/views/forefront.ejs
@@ -84,10 +84,22 @@
             border-color: #ffffff;
             /* blue-500 */
         }
+
+        .header {
+            position: sticky;
+            top: 0;
+            z-index: 50;
+        }
     </style>
 </head>
 
-<body class="bg-zinc-900 text-white flex items-center justify-center min-h-screen">
+<body class="bg-zinc-900 text-white flex flex-col items-center min-h-screen">
+    <div class="header flex flex-row justify-between items-center w-full mb-4 border-b border-zinc-700 px-4 py-4 bg-zinc-900">
+        <a id="header" class="flex flex-row justify-center items-center hover:none border px-3 py-2 border-zinc-700 rounded-lg" href="/home">
+            <img src="/images/Peacock 2.svg" alt="Binora Pre" class="w-12 h-12 mr-4 rounded-lg pt-1 bg-zinc-800">
+            <h1 class="text-3xl font-bold">Peacock</h1>
+        </a>
+    </div>
     <form action="/forefront" method="post" class="bg-zinc-800 p-6 rounded shadow-md w-full max-w-md">
         <h2 class="text-2xl font-bold mb-6">Portfolio Builder Form</h2>
         <div class="mb-4">
