--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,9 @@
 </head>
 <body class="bg-zinc-900 text-white flex flex-col items-center gap-2">
     <div class="header flex flex-row justify-between items-center w-full mb-4 border-b border-zinc-700 px-4 py-4 bg-zinc-900">
-        <a id="header" class="flex flex-row justify-center items-center hover:none" href="/home">
+        <a id="header" class="flex flex-row justify-center items-center hover:none border px-3 py-2 border-zinc-700 rounded-lg" href="/home">
             <img src="/images/Peacock 2.svg" alt="Binora Pre" class="w-12 h-12 mr-4 rounded-lg pt-1 bg-zinc-800">
-            <h1 class="text-4xl font-bold">Peacock</h1>
+            <h1 class="text-3xl font-bold">Peacock</h1>
         </a>
     </div>
     <form action="/name" method="post" class="flex flex-col justify-center">
